--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-react": "^4.1.0",
     "classnames": "^2.3.2",
+    "csstype": "^3.1.2",
     "dayjs": "^1.11.10",
     "eslint": "^8.52.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
